--- a/views/add-product.pug
+++ b/views/add-product.pug
@@ -1,11 +1,7 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title #{docTitle}
+extends layout/main-layout.pug
+block styles
         link(rel="stylesheet", href="/css/product.css")
-    body 
+block content
         header 
             nav 
                 ul 
